--- a/SIGS/app/views/layouts/application.html.erb
+++ b/SIGS/app/views/layouts/application.html.erb
@@ -64,7 +64,7 @@
             <li class="dropdown">
               <a data-toggle="collapse" href="#alocar">Alocações</a>
                 <ul class="collapse" id="alocar">
-                  <li><%= link_to "Graduação", allocations_new_path %></a></li>
+                  <li><%= link_to "Graduação", school_rooms_index_path %></a></li>
                   <li><a href="#">Extensão</a></li>
                 </ul>
             </li>
