--- a/SIGS/app/views/reports/by_discipline.html.erb
+++ b/SIGS/app/views/reports/by_discipline.html.erb
@@ -17,7 +17,7 @@
 <% if @disciplines.count == 0 %>
   <h3>Não há salas registradas no momento.</h3>
 <% else %>
-  <table class="table table-striped table-hover">
+  <table class="table table-striped">
 		<thead>
 	    <tr>
 	      <th>Disciplina</th>
