issue #24: Rebase development into us01_realize_allocation and organize of seeds.rb

--- a/SIGS/app/views/school_rooms/index.html.erb
+++ b/SIGS/app/views/school_rooms/index.html.erb
@@ -29,7 +29,7 @@
         <td><%= school_room.discipline.name %></td>
         <td><%= school_room.name %></td>
         <td>
-          <% school_room.course.each do |course| %>
+          <% school_room.courses.each do |course| %>
             <%= course.name %> <br>
           <% end %>
         <td><%= school_room.vacancies %></td>
