--- a/SIGS/app/views/school_rooms/search_disciplines.html.erb
+++ b/SIGS/app/views/school_rooms/search_disciplines.html.erb
@@ -30,7 +30,7 @@
 				<td><%= school_room.discipline.name %></td>
         <td><%= school_room.name %></td>
         <td>
-          <% school_room.course.each do |course| %>
+          <% school_room.courses.each do |course| %>
             <%= course.name %> <br>
           <% end %>
         </td>
