issue #47: separate controller reports disciplines

--- a/SIGS/app/views/reports_disciplines/by_discipline.html.erb
+++ b/SIGS/app/views/reports_disciplines/by_discipline.html.erb
@@ -13,9 +13,9 @@
 
 <% end %>
 
-<h1>Salas</h1>
+<h2>Disciplinas</h2>
 <% if @disciplines.count == 0 %>
-  <h3>Não há salas registradas no momento.</h3>
+  <h3>Não há disciplinas registradas no momento.</h3>
 <% else %>
   <table class="table table-striped">
 		<thead>
