issue #24: Add link to allocation in school rooms index

--- a/SIGS/app/views/allocations/new.html.erb
+++ b/SIGS/app/views/allocations/new.html.erb
@@ -77,7 +77,7 @@
         if (col == 0){
           string += "<th>" + data[row][col] + "</th>";
         } else if (data[row][col][0] == " ") {
-          string += '<td>';
+          string += '<td id="check_' + day[col] + "_" + (row + 6) + '">';
           if(disabled) {
             string += '<input type="checkbox" value="1" name="' + day[col] + '[][active]" disabled/>';
           } else {
