--- a/SIGS/app/views/allocations/new.html.erb
+++ b/SIGS/app/views/allocations/new.html.erb
@@ -66,7 +66,7 @@
     var day = ["", "Segunda", "Terça", "Quarta", "Quinta", "Sexta", "Sábado"];
     var shift = data[0][1][5];
     var disabled;
-    for(row = 0; row < 17; row++) {
+    for(row = 0; row < 18; row++) {
       if((row <= 11 && shift == 1) || (row > 11 && shift == 2))
         disabled = false;
       else {
@@ -79,15 +79,15 @@
         } else if (data[row][col][0] == " ") {
           string += '<td id="check_' + day[col] + "_" + (row + 6) + '">';
           if(disabled) {
-            string += '<input type="checkbox" value="1" name="' + day[col] + '[][active]" disabled/>';
+            string += '<input type="checkbox" value="1" name="' + day[col] + '[' + (6 + row) + '][active]" disabled/>';
           } else {
-            string += '<input type="checkbox" value="1" name="' + day[col] + '[][active]"/>';
+            string += '<input type="checkbox" value="1" name="' + day[col] + '[' + (6 + row) + '][active]"/>';
           }
-          string += '<input value="' + data[row][col][2] + '" type="hidden" name="' + day[col] + '[][room_id]" />' +
-          '<input value="' + data[row][col][1] + '" type="hidden" name="' + day[col] + '[][school_room_id]" />' +
-          '<input value="' + day[col] + '" type="hidden" name="' + day[col] + '[][day]" />' +
-          '<input value="' + data[row][col][3] + '" type="hidden" name="' + day[col] + '[][start_time]" />' +
-          '<input value="' + data[row][col][4] + '" type="hidden" name="' + day[col] + '[][final_time]" />' +
+          string += '<input value="' + data[row][col][2] + '" type="hidden" name="' + day[col] + '[' + (6 + row) +'][room_id]" />' +
+          '<input value="' + data[row][col][1] + '" type="hidden" name="' + day[col] + '[' + (6 + row) +'][school_room_id]" />' +
+          '<input value="' + day[col] + '" type="hidden" name="' + day[col] + '[' + (6 + row) +'][day]" />' +
+          '<input value="' + data[row][col][3] + '" type="hidden" name="' + day[col] + '[' + (6 + row) +'][start_time]" />' +
+          '<input value="' + data[row][col][4] + '" type="hidden" name="' + day[col] + '[' + (6 + row) +'][final_time]" />' +
         '</td>';
         } else {
           string += "<td>" + data[row][col][0] + "</td>";
@@ -97,8 +97,9 @@
     }
 
     $("#hours_table").html(string);
+  }
 
-    $("td").on("click",function(event) {
+  $("td").on("click",function(event) {
     var target = $(event.target);
     if (target.is('input:checkbox')) return;
 
@@ -109,6 +110,5 @@
     } else {
         checkbox.prop("checked",false);
     }
-});
-  }
+  });
 </script>
