create view and controller for generate reports

--- a/SIGS/app/views/layouts/application.html.erb
+++ b/SIGS/app/views/layouts/application.html.erb
@@ -73,6 +73,8 @@
                 <a data-toggle="collapse" href="#relatorios">Relatórios
                   <ul class="collapse" id="relatorios">
                     <li><%= link_to "Salas", reports_by_room_path %></li>
+                    <li><%= link_to "Turmas",reports_school_room_path%></li>
+
                   </ul>
               </li>
           </ul>
