--- a/SIGS/app/assets/stylesheets/reports.scss
+++ b/SIGS/app/assets/stylesheets/reports.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the reports controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.report_school{
+	text-align:center;
+}
