--- a/SIGS/app/views/reports_disciplines/by_discipline.html.erb
+++ b/SIGS/app/views/reports_disciplines/by_discipline.html.erb
@@ -15,7 +15,7 @@
 
 <h2>Disciplinas</h2>
 <% if @disciplines.count == 0 %>
-  <h3>Não há disciplinas registradas no momento.</h3>
+  <h3>Não há disciplinas registradas.</h3>
 <% else %>
   <table class="table table-striped">
 		<thead>
