--- a/SIGS/app/assets/stylesheets/reports.scss
+++ b/SIGS/app/assets/stylesheets/reports.scss
@@ -2,6 +2,30 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.report_school{
-	text-align:center;
+.school_room_reports{
+	margin-top: -7px !important;
+	text-align: center;
+
+}
+
+.btn_relatorio_schoolroom{
+	margin-left: -340px !important;
+	width: 124px;
+	height:34px;
+}
+
+.reports_all, .reports_allocation, .reports_no_all{
+	position: absolute;
+}
+
+.display_none{
+	display: none !important;	
+}
+
+.display_block{
+	display:inline-block !important;
+}
+.title-report{
+	margin-left: -200px !important;
+	margin-top: -50px !important;
 }
