--- a/SIGS/app/assets/stylesheets/school_rooms.scss
+++ b/SIGS/app/assets/stylesheets/school_rooms.scss
@@ -41,3 +41,13 @@
 .school-room-allocated {
 	background: #ffff99;
 }
+
+//school room reports
+
+.report_school{
+  margin-left: -340px !important;
+}
+.report_school label{
+  padding-right: 20px !important;
+  margin-top: -7px !important;
+}
