--- a/SIGS/app/views/reports/school_reports.html.erb
+++ b/SIGS/app/views/reports/school_reports.html.erb
@@ -1,15 +1,39 @@
 <main class="mainConteiner">
-  <h1>Relatório por Turmas</h1>
+  <h1 class="title-report">Relatório por Turmas</h1>
   <form class="report_school">
-    <input type="radio" name="relatorio">
+    <input type="radio" name="relatorio" class="all_reports_school_room" checked>
     <label class="school_room_reports">Todas</label>
-    <%= link_to "Gerar Relatório", reports_school_room_allocation_path(format: :pdf), class:"btn btn-danger" %>
-    <input type="radio" name="relatorio">
+    <input type="radio" name="relatorio" class="allocations_reports_school_room">
     <label class="school_room_reports">Alocadas</label>
-     <%= link_to "Gerar Relatório", reports_school_room_allocation_path(format: :pdf), class:"btn btn-danger" %>
-    <input type="radio" name="relatorio">
+    <input type="radio" name="relatorio" class="no_all_reports_school_room">
     <label class="school_room_reports">Não Alocadas</label>
-     <%= link_to "Gerar Relatório", reports_school_room_allocation_path(format: :pdf), class:"btn btn-danger" %>
-    <br>
   </form>
+  <div class="btn_relatorio_schoolroom">
+    <%= link_to "Gerar Relatório", reports_school_room_all_path(format: :pdf), class:"btn btn-danger reports_all" %>
+    <%= link_to "Gerar Relatório", reports_school_room_allocation_path(format: :pdf), class:"btn btn-danger reports_allocation display_none" %>
+     <%= link_to "Gerar Relatório", reports_school_room_not_allocation_path(format: :pdf), class:"btn btn-danger reports_no_all display_none" %>
+    <br>
+  </div>
 </main>
+
+<script type="text/javascript">
+
+  $(".all_reports_school_room").click(function(){
+    $(".reports_allocation").addClass("display_none");
+     $(".reports_no_all").addClass("display_none");
+     $(".reports_all").removeClass("display_none");
+
+   });
+
+  $(".allocations_reports_school_room").click(function(){
+    $(".reports_allocation").removeClass("display_none");
+     $(".reports_all").addClass("display_none");
+     $(".reports_no_all").addClass("display_none");
+  });
+
+   $(".no_all_reports_school_room").click(function(){
+     $(".reports_all").addClass("display_none");
+     $(".reports_no_all").removeClass("display_none");
+     $(".reports_allocation").addClass("display_none");
+  });
+</script>
