issue #51: Implements backend of solicitation in allocation period

--- a/SIGS/app/assets/stylesheets/style.scss
+++ b/SIGS/app/assets/stylesheets/style.scss
@@ -23,6 +23,12 @@
   margin: 60px 0;
 }
 
+.subtitle{
+  font-size: 20px;
+  font-family: 'Sawasdee';
+  margin: -50px 0 60px 0;
+}
+
 .container.container.container-fluid.myContainer:not(#signIn) {
 
   width: 98vw !important;
