--- a/SIGS/app/views/school_rooms/index.html.erb
+++ b/SIGS/app/views/school_rooms/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Turmas - <%= courses_by_user.name %></h1>
+<h1>Turmas - <%= courses_by_user.department.name %></h1>
 
 <%= form_for(:current_search, url: search_disciplines_path) do |f|%>
 
