--- a/SIGS/app/views/solicitations/allocation_period.html.erb
+++ b/SIGS/app/views/solicitations/allocation_period.html.erb
@@ -1,16 +1,20 @@
-<h1>Solicitar Alocação - Período de Alocação</h1>
+<h1>Solicitar Alocação</h1>
+<p class="subtitle">Período de Alocação</p>
+
 <%= render partial: "school_rooms/show", locals: {school_room: @school_room} %>
 
 <%= form_for :solicitation, url: save_allocation_period_path do |f| %>
-  <%=f.label :departments, 'Departamento:' %>
-  <%=f.select :departments, @departments.collect {|d| [d.name, d.id] }, class: 'form-control' %>
+  <%= f.hidden_field :school_room_id, value: params[:school_room_id], readonly: true %>
+  <%= f.label :departments, 'Departamento:' %>
+  <%= f.select :departments, @departments.collect {|d| [d.name, d.id] }, class: 'form-control' %>
+
+  <%= f.label :justify, 'Justificativa:' %>
+  <%= f.text_area :justify, class: 'form-control' %>
 
   <table class="hours_table table">
 
   </table>
 
-  <%=f.label :justify, 'Justificativa:' %>
-  <%=f.text_area :justify, class: 'form-control' %>
   <br>
   <%= f.submit "Enviar", class: 'pull-right btn btn-default btn-success' %>
 
@@ -28,12 +32,15 @@
     table += "<th>Sábado</th>";
     table += "</tr>";
     week = ["segunda", "terca","quarta","quinta","sexta", "sabado"]
-    for (var row = 0; row < 18; row++) {
+    
+    period = <%= @shift %>;
+    start = (period == 1) ? 6 : 18
+    final = (period == 1) ? 18 : 24
+    for (var row = start; row < final; row++) {
       table +="<tr>";
-      table += "<td>" + (6 + row) + ":00</td>";
-
+      table += "<td>" + row + ":00</td>";
       for (var col = 0; col < 6; col++) {
-        table += "<td><input type='checkbox' name='" + week[col] + "[" + (6 + row) + "]' /></td>";
+        table += "<td><input type='checkbox' name='" + week[col] + "[" + row + "]' value='1' /></td>";
       }
       table += "</tr>";
     }
