--- a/SIGS/app/assets/stylesheets/rooms.scss
+++ b/SIGS/app/assets/stylesheets/rooms.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the rooms controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.tableViewAllocation tr th, .tableViewAllocation tr td {
+  text-align: center;
+  vertical-align: middle !important;
+}
