issue #54:  Implement method to create a report by building

--- a/SIGS/app/views/layouts/application.html.erb
+++ b/SIGS/app/views/layouts/application.html.erb
@@ -74,7 +74,7 @@
                     <li><%= link_to "Disciplinas", reports_by_discipline_path %></li>
                     <li><%= link_to "Salas", reports_by_room_path %></li>
                     <li><%= link_to "Turmas",reports_school_room_path%></li>
-
+                    <li><%= link_to "Prédios", reports_by_building_path %></li>
                   </ul>
               </li>
           </ul>
